cmake_minimum_required(VERSION 3.5)
aux_source_directory(. SRC_LIST)
aux_source_directory(./iocore SRC_LIST)
INCLUDE_DIRECTORIES(./iocore)
aux_source_directory(./iocore/eventsystem SRC_LIST)
INCLUDE_DIRECTORIES(./iocore/eventsystem)
aux_source_directory(./iocore/net SRC_LIST)
INCLUDE_DIRECTORIES(./iocore/net)
aux_source_directory(./iocore/raft SRC_LIST)
INCLUDE_DIRECTORIES(./iocore/raft)
aux_source_directory(./lib SRC_LIST)
INCLUDE_DIRECTORIES(./lib)
aux_source_directory(./lib/mgmt SRC_LIST)
INCLUDE_DIRECTORIES(./lib/mgmt)
aux_source_directory(./lib/mgmt/api SRC_LIST)
INCLUDE_DIRECTORIES(./lib/mgmt/api)
aux_source_directory(./lib/mgmt/api/include SRC_LIST)
INCLUDE_DIRECTORIES(./lib/mgmt/api/include)
aux_source_directory(./lib/mgmt/cluster SRC_LIST)
INCLUDE_DIRECTORIES(./lib/mgmt/cluster)
aux_source_directory(./lib/mgmt/utils SRC_LIST)
INCLUDE_DIRECTORIES(./lib/mgmt/utils)
aux_source_directory(./lib/records SRC_LIST)
INCLUDE_DIRECTORIES(./lib/records)
aux_source_directory(./lib/ts SRC_LIST)
INCLUDE_DIRECTORIES(./lib/ts)
aux_source_directory(./tool SRC_LIST)
INCLUDE_DIRECTORIES(./tool)
add_executable(${PROJECT_NAME} ${SRC_LIST})